# Video_analysis_and_validation_agent

./: .gitignore  AGENTS.md  README.md  analysis_agent.py  assessment.md  deviation_classifier.py  evaluate_accuracy.py  installation_id.txt  nike_analysis_report_v2.md  ocr_pipeline.py  pyproject.toml  run_log_7.txt  run_log_8.txt  structured_step.py  vision_llm_analyzer.py  wrangler_analysis_report_v2.md  wrangler_analysis_report_v4.md  wrangler_analysis_report_v5.md  wrangler_analysis_report_v6.md
gherkin_files/: nike_product_search.feature  wrangler_product_search.feature
opt/gherkin_files/: Search_for_black_running_shoes,_verify_size_10_availability,_and_add_to_cart.feature  Search_for_solid_blue_shirt,_verify_XL_availability,_and_add_to_cart.feature
opt/opt/output/: deviation_report_run_20260104_191233.md
opt/output/: deviation_report_run_20260104_050126.md  deviation_report_run_20260104_191233.md  nike_analysis_report.md  nike_analysis_report_final.md  nike_analysis_report_final_v2.md  wrangler_analysis_report.md  wrangler_analysis_report_final_v2.md  wrangler_analysis_report_v7.md  wrangler_final_report.md
opt/output/run_20260104_050126/: wrangler_product_search.feature_result.html  wrangler_product_search.feature_result.xml
opt/output/run_20260104_130134/: wrangler_product_search.feature_result.html  wrangler_product_search.feature_result.xml
opt/output/run_20260104_140632/: nike_product_search.feature_result.html  nike_product_search.feature_result.xml
opt/output/run_20260104_141102/: nike_product_search.feature_result.html  (+1 more)
(+66 files in other folders)
