[project]
name = "video-analysis-and-validation-agent"
version = "0.1.0"
description = "Analysis agent for Hercules test run validation. Compares planning logs, video evidence, and test output to detect deviations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.26.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
